# samples

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  ClonableBase.cpp  CloneShapes.cpp  Discussion.md  Discussion.mmd  DoNotSlice.cpp  EreaseRemoveIdiom.cpp  GNUmakefile  GNUmakefile.4ninja  InnerClassIdiom.cpp  Makefile  NonCopyable.cpp  NonVirtualBaseClassTest.cpp  Noncopyable.cpp  Pimple.cpp  PimplePattern.cpp  PostInitialize.cpp  Pythagorean_triple.cpp  README.rst  Round.cpp  SFINAE-cxx11.cpp  User.cpp  User.hpp  access_privates.cpp  at_test.cpp  bitset.cpp  bounds_test.cpp  byteorder.cpp  callback.cpp  chainOfResponsibility.cpp  classOutput.cpp  clone.cpp  collate.cpp  command-pattern.cpp  compile_commands.json  concept_check_extension.hpp  copy-test.cpp  (+54 more)
tcb/: span.hpp
